--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-ctranformers==0.2.5
-sentence-transfomers==2.2.2
-pinecone-client
+ctransformers==0.2.5
+sentence-transformers==2.2.2
+pinecone-client==2.2.4
 langchain==0.0.255
-flask
+flask==2.3.3
